ask5 completed and small changes to ask 1,2,3,4

--- a/Ask1/index.html
+++ b/Ask1/index.html
@@ -2,7 +2,7 @@
 <html lang="el">
     <head>
         <title>Αρχική Σελίδα | Take A Byte | Computers and Tech</title>
-
+        <link rel="icon" href="../assets/logocolor_icon.png" type="image/x-icon">
         <meta charset="UTF-8">
         <meta name="description" content="Take A Byte | Computers and Tech">
         <meta name="author" content="Christos Rousas, Ioannis Mastrogiannis">
@@ -16,7 +16,7 @@
 
         <header class="site-header">
             <h1>Take A Byte | Computers and Tech</h1>
-            <img src="../assets/logo1.png" width="200px" class="top-logo" title="take-a-byte-top-logo" alt="This is our website logo.">
+            <img src="../assets/logo1.png" width="200" class="top-logo" title="take-a-byte-top-logo" alt="This is our website logo.">
 
             <nav class="top-menu">
                 <ul>
@@ -38,21 +38,21 @@
                 <p>Το κατάστημά μας ξεκίνησε να δραστηριοποιείται στον χώρο της τεχνολογίας το 2022. Διαθέτει ευρεία γκάμα προϊόντων τεχνολογίας,
                     κινητά τηλέφωνα, υπολογιστές και εξαρτήματα, περιφερειακά, οικιακές συσκευές και άλλα.</p>
                 <p>Έτσι, μέσα σε λίγους μήνες, έχει καταξιωθεί ως ένα από τα πιο αγαπημένα καταστήματα τεχνολογίας στην ελληνική αγορά.</p>
-                    <img src="../assets/main_smartphones.jpg" height="400px">
+                    <img src="../assets/main_smartphones.jpg" height="400" alt="smartphones">
                     <p>Έχουμε <a href="javascript:void(0);">κινητά τηλέφωνα</a> για όλες τις ανάγκες, από χαλαρούς χρήστες που θέλουν ένα απλό 
                         τηλέφωνο για καθημερινή χρήση, μέχρι τους πιο hardcore fans των mobile παιχνιδιών!</p>
-                    <img src="../assets/main_laptops.jpg" height="400px">
+                    <img src="../assets/main_laptops.jpg" height="400" alt="laptops">
                     <p>Έχουμε <a href="products-laptops.html">laptops</a> όλων των ειδών και μεγεθών. Είτε θέλεις ένα gaming laptop για να
                         αντικαταστήσεις τον προσωπικό σου υπολογιστή, είτε προτιμάς ένα laptop που
                         θα μπορείς να μεταφέρεις εύκολα στη δουλειά ή στη σχολή, θα το βρεις <a href="products-laptops.html">εδώ</a>!
                     </p>
-                    <img src="../assets/main_computer_parts.jpg" height="400px">
+                    <img src="../assets/main_computer_parts.jpg" height="400" alt="computer parts">
                     <p>Αν θέλεις να φτιάξεις τον δικό σου υπολογιστή, προσαρμοσμένο στα δικά σου μέτρα,
                         μπορείς να βρεις στο κατάστημά μας όλα τα απαραίτητα <a href="javascript:void(0);">εξαρτήματα</a> 
                         που θα χρειαστείς, όπως <a href="products-graphics_cards.html">κάρτα γραφικών</a>, 
                         <a href="javascript:void(0);">μνήμη RAM</a>, ή <a href="javascript:void(0);">επεξεργαστή</a>.
                     </p>
-                    <img src="../assets/main_household_appl.jpg" height="400px">
+                    <img src="../assets/main_household_appl.jpg" height="400" alt="household appliances">
                     <p>Αν είσαι φοιτητής και μετακόμισες στο καινούριο σου σπίτι, ή αν απλά
                         έγινε σεισμός 7 ρίχτερ στην περιοχή σου, χρειάζεσαι <a href="javascript:void(0);">οικιακές συσκευές</a>.
                         Στο Take A Byte θα βρεις όλες τις συσκευές που χρειάζεσαι για να εξοπλίσεις το
@@ -70,25 +70,25 @@
 
 
         <footer class="site-footer">
-            <section class="left-footer-info">
+            <div class="left-footer-info">
                 <h3>Πληροφορίες Επικοινωνίας</h3>
                 <p>28ης Οκτωβρίου 76, Αθήνα, 10434</p>
                 <iframe class="map-iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3144.272595569044!2d23.729929915656633!3d37.994101707282745!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14a1a2cc954f82ed%3A0x5795a212958689bb!2s28is%20Oktovriou%2076%2C%20Athina%20104%2034!5e0!3m2!1sen!2sgr!4v1669470073265!5m2!1sen!2sgr" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                <p>Τηλ: <a href="tel: 210 8203 124">210 8203 124</a></p>
-            </section>
-            <section class="middle-footer-links">
+                <p>Τηλ: <a href="tel:%20210%208203%20124">210 8203 124</a></p>
+            </div>
+            <div class="middle-footer-links">
                 <ul class="site-footer-list">
-                    <li class="site-footer-list-item"><a href="https://www.facebook.com"><img src="../assets/facebook-logo.png" alt="Facebook" width="100" height="100"></a></li>
-                    <li class="site-footer-list-item"><a href="https://www.instagram.com"><img src="../assets/instagram-logo.png" alt="Instagram" width="100" height="100"></a></li>
-                    <li class="site-footer-list-item"><a href="mailto:p3190180@aueb.gr;p3190114@aueb.gr?subject=Webpage Contact"><img src="../assets/email-logo.png" alt="Email" width="100" height="100"></a></li>
+                    <li class="site-footer-list-item"><a href="https://www.facebook.com"><img src="../assets/facebook-logo.png" alt="Facebook" ></a></li>
+                    <li class="site-footer-list-item"><a href="https://www.instagram.com"><img src="../assets/instagram-logo.png" alt="Instagram" ></a></li>
+                    <li class="site-footer-list-item"><a href="mailto:p3190180@aueb.gr;p3190114@aueb.gr?subject=Webpage%20Contact"><img src="../assets/email-logo.png" alt="Email" ></a></li>
                 </ul>
                 <span class="copyright">Take A Byte © 2022</span>
-            </section>
-            <section class="right-footer-open">
+            </div>
+            <div class="right-footer-open">
                 <table class="opening-hours-table">
                     <thead>
                         <tr>
-                            <th colspan="2"><h3>Ώρες Λειτουργίας</h3></th>
+                            <th colspan="2"><span class="table-header">Ώρες Λειτουργίας</span></th>
                         </tr>
                     </thead>
                     <tr>
@@ -104,7 +104,7 @@
                         <td>Κλειστά</td>
                     </tr>
                 </table>
-            </section>
+            </div>
         </footer>
 
     </body>
