--- a/Ask1/product-Dell_Vostro_3500.html
+++ b/Ask1/product-Dell_Vostro_3500.html
@@ -2,7 +2,7 @@
 <html lang="el">
     <head>
         <title>Dell Vostro 3500 15.6" FHD (i3-1115G4/8GB/256GB SSD/W10 Home) (GR Keyboard) | Take A Byte | Computers and Tech</title>
-
+        <link rel="icon" href="../assets/logocolor_icon.png" type="image/x-icon">
         <meta charset="UTF-8">
         <meta name="description" content="Take A Byte | Computers and Tech">
         <meta name="author" content="Christos Rousas, Ioannis Mastrogiannis">
@@ -16,7 +16,7 @@
 
         <header class="site-header">
             <h1>Take A Byte | Computers and Tech</h1>
-            <img src="../assets/logo1.png" width="200px" class="top-logo" title="take-a-byte-top-logo" alt="This is our website logo.">
+            <img src="../assets/logo1.png" width="200" class="top-logo" title="take-a-byte-top-logo" alt="This is our website logo.">
 
             <nav class="top-menu">
                 <ul>
@@ -44,7 +44,7 @@
 
             <article class="product">
                 <section class="product-info">
-                    <img class="product-image" src = "../assets/laptop1.jpg" width="230" height="150">
+                    <img class="product-image" src = "../assets/laptop1.jpg" width="230" height="150" alt="product image">
                     <h2>Dell Vostro 3500 15.6" FHD (i3-1115G4/8GB/256GB SSD/W10 Home) (GR Keyboard)</h2>
                         <ul>
                             <li>Κωδικός Προϊόντος: 010601</li>
@@ -59,7 +59,7 @@
                         που αποτελεί την standard λύση μεταξύ ποιότητας εικόνας, κόστους και κατανάλωσης μπαταρίας. Όσο μεγαλύτερη ανάλυση, τόσο καλύτερη ευκρίνεια
                         και λεπτομέρεια έχει η εικόνα αλλά παράλληλα αυξάνεται και η κατανάλωση ενέργειας.
                     </p>
-                    <img class="specs-image odd" src="../assets/laptop1_specs1.png" width="400">
+                    <img class="specs-image odd" src="../assets/laptop1_specs1.png" width="400" alt="laptop 1 specs image 1">
                     <p>
                         Ο επεξεργαστής που ενσωματώνει είναι ο Intel Core i3 1115G4 χρονισμένος στα 3Ghz της γενιάς Tiger Lake (11th Gen) (2021).
                         Μπορεί να εκτελέσει απροβλημάτιστα εργασίες καθημερινής φύσεως όπως πλοήγηση στο διαδίκτυο,
@@ -211,7 +211,7 @@
 
                 <article class="product-item">
                     
-                    <img src="../assets/laptop2.jpg">
+                    <img src="../assets/laptop2.jpg" width="300" alt="laptop 2">
                     <h2><a href="javascript:void(0);">HP 255 G8 15.6" FHD (Athlon-3150U/4GB/128GB SSD/W10 Pro) (US Keyboard)</a></h2>
                     <ul>
                         <li>Κωδικός Προϊόντος: 010602</li>
@@ -224,7 +224,7 @@
                 </article>
                 <article class="product-item">
                 
-                    <img src="../assets/laptop3.jpg">
+                    <img src="../assets/laptop3.jpg" width="300" alt="laptop 3">
                     <h2><a href="javascript:void(0);">Apple MacBook Air 13.3" (2020) IPS Retina Display (M1/8GB/256GB SSD) Space Gray (GR Keyboard)</a></h2>
                     <ul>
                         <li>Κωδικός Προϊόντος: 010603</li>
@@ -242,25 +242,25 @@
 
 
         <footer class="site-footer">
-            <section class="left-footer-info">
+            <div class="left-footer-info">
                 <h3>Πληροφορίες Επικοινωνίας</h3>
                 <p>28ης Οκτωβρίου 76, Αθήνα, 10434</p>
                 <iframe class="map-iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3144.272595569044!2d23.729929915656633!3d37.994101707282745!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14a1a2cc954f82ed%3A0x5795a212958689bb!2s28is%20Oktovriou%2076%2C%20Athina%20104%2034!5e0!3m2!1sen!2sgr!4v1669470073265!5m2!1sen!2sgr" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                <p>Τηλ: <a href="tel: 210 8203 124">210 8203 124</a></p>
-            </section>
-            <section class="middle-footer-links">
+                <p>Τηλ: <a href="tel:%20210%208203%20124">210 8203 124</a></p>
+            </div>
+            <div class="middle-footer-links">
                 <ul class="site-footer-list">
-                    <li class="site-footer-list-item"><a href="https://www.facebook.com"><img src="../assets/facebook-logo.png" alt="Facebook" width="100" height="100"></a></li>
-                    <li class="site-footer-list-item"><a href="https://www.instagram.com"><img src="../assets/instagram-logo.png" alt="Instagram" width="100" height="100"></a></li>
-                    <li class="site-footer-list-item"><a href="mailto:p3190180@aueb.gr;p3190114@aueb.gr?subject=Webpage Contact"><img src="../assets/email-logo.png" alt="Email" width="100" height="100"></a></li>
+                    <li class="site-footer-list-item"><a href="https://www.facebook.com"><img src="../assets/facebook-logo.png" alt="Facebook" ></a></li>
+                    <li class="site-footer-list-item"><a href="https://www.instagram.com"><img src="../assets/instagram-logo.png" alt="Instagram" ></a></li>
+                    <li class="site-footer-list-item"><a href="mailto:p3190180@aueb.gr;p3190114@aueb.gr?subject=Webpage%20Contact"><img src="../assets/email-logo.png" alt="Email" ></a></li>
                 </ul>
                 <span class="copyright">Take A Byte © 2022</span>
-            </section>
-            <section class="right-footer-open">
+            </div>
+            <div class="right-footer-open">
                 <table class="opening-hours-table">
                     <thead>
                         <tr>
-                            <th colspan="2"><h3>Ώρες Λειτουργίας</h3></th>
+                            <th colspan="2"><span class="table-header">Ώρες Λειτουργίας</span></th>
                         </tr>
                     </thead>
                     <tr>
@@ -276,7 +276,7 @@
                         <td>Κλειστά</td>
                     </tr>
                 </table>
-            </section>
+            </div>
         </footer>
 
     </body>
