--- a/Ask4/product-Gigabyte_GeForce_GTX_1660.html
+++ b/Ask4/product-Gigabyte_GeForce_GTX_1660.html
@@ -2,7 +2,7 @@
 <html lang="el">
     <head>
         <title>Gigabyte GeForce GTX 1660 6GB GDDR5 OC Κάρτα Γραφικών PCI-E x16 3.0 με HDMI και 3 DisplayPort | Take A Byte | Computers and Tech</title>
-
+        <link rel="icon" href="../assets/logocolor_icon.png" type="image/x-icon">
         <meta charset="UTF-8">
         <meta name="description" content="Take A Byte | Computers and Tech">
         <meta name="author" content="Christos Rousas, Ioannis Mastrogiannis">
