--- a/Ask4/products-graphics_cards.html
+++ b/Ask4/products-graphics_cards.html
@@ -2,7 +2,7 @@
 <html lang="el">
     <head>
         <title>Κάρτες Γραφικών | Take A Byte | Computers and Tech</title>
-
+        <link rel="icon" href="../assets/logocolor_icon.png" type="image/x-icon">
         <meta charset="UTF-8">
         <meta name="description" content="Take A Byte | Computers and Tech">
         <meta name="author" content="Christos Rousas, Ioannis Mastrogiannis">
