--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="el">
     <head>
         <title>Κεντρική Σελίδα με Συνδέσμους</title>
-
+        <link rel="icon" href="../assets/logocolor_icon.png" type="image/x-icon">
         <meta charset="UTF-8">
         <meta name="description" content="Central Page with Links">
         <meta name="author" content="Christos Rousas, Ioannis Mastrogiannis">
