--- a/Ask1/product-Gigabyte_GeForce_GTX_1660.html
+++ b/Ask1/product-Gigabyte_GeForce_GTX_1660.html
@@ -2,7 +2,7 @@
 <html lang="el">
     <head>
         <title>Gigabyte GeForce GTX 1660 6GB GDDR5 OC Κάρτα Γραφικών PCI-E x16 3.0 με HDMI και 3 DisplayPort | Take A Byte | Computers and Tech</title>
-
+        <link rel="icon" href="../assets/logocolor_icon.png" type="image/x-icon">
         <meta charset="UTF-8">
         <meta name="description" content="Take A Byte | Computers and Tech">
         <meta name="author" content="Christos Rousas, Ioannis Mastrogiannis">
@@ -16,7 +16,7 @@
 
         <header class="site-header">
             <h1>Take A Byte | Computers and Tech</h1>
-            <img src="../assets/logo1.png" width="200px" class="top-logo" title="take-a-byte-top-logo" alt="This is our website logo.">
+            <img src="../assets/logo1.png" width="200" class="top-logo" title="take-a-byte-top-logo" alt="This is our website logo.">
 
             <nav class="top-menu">
                 <ul>
@@ -44,7 +44,7 @@
 
             <article class="product">
                 <section class="product-info">
-                    <img class="product-image" src = "../assets/gr1.jpeg" width="230" height="190">
+                    <img class="product-image" src = "../assets/gr1.jpeg" width="230" height="190" alt="product image">
                     <h2>Gigabyte GeForce GTX 1660 6GB GDDR5 OC Κάρτα Γραφικών PCI-E x16 3.0 με HDMI και 3 DisplayPort</h2>
                     <ul>
                         <li>Κωδικός Προϊόντος: 020201</li>
@@ -58,13 +58,13 @@
                     <p> Gigabyte GeForce GTX 1660 6GB OC βασίζεται στην αρχιτεκτονική NVIDIA Turing με ενσωματωμένη μνήμη 6GB GDDR5, ταχύτητα επεξεργαστή 1785MHz
                         και σύστημα ψύξης Windforce 2X
                     </p>
-                    <img class="specs-image odd" src="../assets/gr1_specs1.png" width="400">
+                    <img class="specs-image odd" src="../assets/gr1_specs1.png" width="400" alt="graphics card 1 specs image 1">
                     <p>
                         Το σύστημα ψύξης Windforce 2X διαθέτει μοναδικούς ανεμιστήρες λεπίδων 2x90mm, Alternate Spinning, σύνθετο σωλήνα
                         χαλκού άμεσης αφής και λειτουργικότητα ενεργού ανεμιστήρα 3D, παρέχοντας ταυτόχρονα μια αποτελεσματική
                         ικανότητα απαγωγής θερμότητας για υψηλότερη απόδοση σε χαμηλότερες θερμοκρασίες
                     </p>
-                    <img class="specs-image even" src="../assets/gr1_specs2.png" width="400">
+                    <img class="specs-image even" src="../assets/gr1_specs2.png" width="400" alt="graphics card 1 specs image 2">
                     <p>
                         Το GIGABYTE "Alternate Spinning" είναι η μόνη λύση που μπορεί να λύσει την ταραχώδη ροή αέρα των γειτονικών ανεμιστήρων.
                         Δεδομένου ότι οι γειτονικοί ανεμιστήρες περιστρέφονται προς την ίδια κατεύθυνση, η κατεύθυνση ροής του αέρα είναι αντίθετη
@@ -175,7 +175,7 @@
 
                 <article class="product-item">
                         
-                    <img src="../assets/gr2.jpeg"> 
+                    <img src="../assets/gr2.jpeg" width="300" alt="graphics card 2"> 
                     <h2><a href="javascript:void(0);">MSI GeForce GTX 1660 Super 6GB GDDR6 Ventus XS OC Κάρτα Γραφικών PCI-E x16 3.0 με HDMI και 3 DisplayPort</a></h2>
                     <ul>
                         <li>Κωδικός Προϊόντος: 020202</li>
@@ -189,7 +189,7 @@
                 </article>
                 <article class="product-item">
                     
-                    <img src="../assets/gr3.jpeg"> 
+                    <img src="../assets/gr3.jpeg" width="300" alt="graphics card 3"> 
                     <h2><a href="javascript:void(0);">MSI GeForce GTX 1660 Super 6GB GDDR6 Gaming X Κάρτα Γραφικών PCI-E x16 3.0 με HDMI και 3 DisplayPort</a></h2>
                     <ul>
                         <il>Κωδικός Προϊόντος: 020203</il>
@@ -208,25 +208,25 @@
 
 
         <footer class="site-footer">
-            <section class="left-footer-info">
+            <div class="left-footer-info">
                 <h3>Πληροφορίες Επικοινωνίας</h3>
                 <p>28ης Οκτωβρίου 76, Αθήνα, 10434</p>
                 <iframe class="map-iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3144.272595569044!2d23.729929915656633!3d37.994101707282745!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14a1a2cc954f82ed%3A0x5795a212958689bb!2s28is%20Oktovriou%2076%2C%20Athina%20104%2034!5e0!3m2!1sen!2sgr!4v1669470073265!5m2!1sen!2sgr" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                <p>Τηλ: <a href="tel: 210 8203 124">210 8203 124</a></p>
-            </section>
-            <section class="middle-footer-links">
+                <p>Τηλ: <a href="tel:%20210%208203%20124">210 8203 124</a></p>
+            </div>
+            <div class="middle-footer-links">
                 <ul class="site-footer-list">
-                    <li class="site-footer-list-item"><a href="https://www.facebook.com"><img src="../assets/facebook-logo.png" alt="Facebook" width="100" height="100"></a></li>
-                    <li class="site-footer-list-item"><a href="https://www.instagram.com"><img src="../assets/instagram-logo.png" alt="Instagram" width="100" height="100"></a></li>
-                    <li class="site-footer-list-item"><a href="mailto:p3190180@aueb.gr;p3190114@aueb.gr?subject=Webpage Contact"><img src="../assets/email-logo.png" alt="Email" width="100" height="100"></a></li>
+                    <li class="site-footer-list-item"><a href="https://www.facebook.com"><img src="../assets/facebook-logo.png" alt="Facebook" ></a></li>
+                    <li class="site-footer-list-item"><a href="https://www.instagram.com"><img src="../assets/instagram-logo.png" alt="Instagram" ></a></li>
+                    <li class="site-footer-list-item"><a href="mailto:p3190180@aueb.gr;p3190114@aueb.gr?subject=Webpage%20Contact"><img src="../assets/email-logo.png" alt="Email" ></a></li>
                 </ul>
                 <span class="copyright">Take A Byte © 2022</span>
-            </section>
-            <section class="right-footer-open">
+            </div>
+            <div class="right-footer-open">
                 <table class="opening-hours-table">
                     <thead>
                         <tr>
-                            <th colspan="2"><h3>Ώρες Λειτουργίας</h3></th>
+                            <th colspan="2"><span class="table-header">Ώρες Λειτουργίας</span></th>
                         </tr>
                     </thead>
                     <tr>
@@ -242,7 +242,7 @@
                         <td>Κλειστά</td>
                     </tr>
                 </table>
-            </section>
+            </div>
         </footer>
 
     </body>
