--- a/Ask1/product-categories.html
+++ b/Ask1/product-categories.html
@@ -2,7 +2,7 @@
 <html lang="el">
     <head>
         <title>Κατηγορίες Προϊόντων | Take A Byte | Computers and Tech</title>
-
+        <link rel="icon" href="../assets/logocolor_icon.png" type="image/x-icon">
         <meta charset="UTF-8">
         <meta name="description" content="Take A Byte | Computers and Tech">
         <meta name="author" content="Christos Rousas, Ioannis Mastrogiannis">
@@ -16,7 +16,7 @@
 
         <header class="site-header">
             <h1>Take A Byte | Computers and Tech</h1>
-            <img src="../assets/logo1.png" width="200px" class="top-logo" title="take-a-byte-top-logo" alt="This is our website logo.">
+            <img src="../assets/logo1.png" width="200" class="top-logo" title="take-a-byte-top-logo" alt="This is our website logo.">
 
             <nav class="top-menu">
                 <ul>
@@ -44,7 +44,7 @@
                 <ol id="category-list">
                     <section class="product-category">
                         <li>
-                            <img src ="../assets/pc.jpg" width="200px" height="200px">
+                            <img src ="../assets/pc.jpg" width="200" height="200" alt="pc and peripherals">
                             <h3>Η/Υ και Περιφερειακές Συσκευές</h3>
                             <ul>
                                 <li> Κουτιά Υπολογιστών </li>
@@ -56,9 +56,9 @@
                             </ul>
                         </li>
                     </section>
-                    <section class="product-category">
+                    <section class="product-category" alt="pc parts">
                         <li>
-                            <img src ="../assets/upgrade.jpg" width="200px" height="200px">
+                            <img src ="../assets/upgrade.jpg" width="200" height="200">
                             <h3>Αναβαθμίσεις</h3>
                             <ul>
                                 <li> Σκληροί δίσκοι </li>
@@ -72,7 +72,7 @@
                     </section>
                     <section class="product-category">
                         <li>
-                            <img src ="../assets/network.jpg" width="200px" height="200px">
+                            <img src ="../assets/network.jpg" width="200" height="200" alt="network">
                             <h3>Network</h3>
                             <ul>
                                 <li> Routers </li>
@@ -86,7 +86,7 @@
                     </section>
                     <section class="product-category">
                         <li>
-                            <img src ="../assets/phone.jpg" width="200px" height="200px">
+                            <img src ="../assets/phone.jpg" width="200" height="200" alt="phones">
                             <h3>Κινητά Τηλέφωνα και Tablets</h3>
                             <ul>
                                 <li> Κινητά Τηλέφωνα </li>
@@ -100,7 +100,7 @@
                     </section>
                     <section class="product-category">
                         <li>
-                            <img src ="../assets/tv.jpg" width="200px" height="200px">
+                            <img src ="../assets/tv.jpg" width="200" height="200" alt="tv">
                             <h3>Τηλεοράσεις και Αξεσουάρ</h3>
                             <ul>
                                 <li> Τηλεοράσεις </li>
@@ -111,7 +111,7 @@
                         </li>
                     </section>
                     <section class="product-category">
-                        <li> <img src ="../assets/house.jpg" width="200px" height="200px">
+                        <li> <img src ="../assets/house.jpg" width="200" height="200" alt="household">
                             <h3>Οικιακές Συσκευές</h3>
                             <ul>
                                 <li> Θέρμανση & Κλιματισμός </li>
@@ -129,25 +129,25 @@
 
 
         <footer class="site-footer">
-            <section class="left-footer-info">
+            <div class="left-footer-info">
                 <h3>Πληροφορίες Επικοινωνίας</h3>
                 <p>28ης Οκτωβρίου 76, Αθήνα, 10434</p>
                 <iframe class="map-iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3144.272595569044!2d23.729929915656633!3d37.994101707282745!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14a1a2cc954f82ed%3A0x5795a212958689bb!2s28is%20Oktovriou%2076%2C%20Athina%20104%2034!5e0!3m2!1sen!2sgr!4v1669470073265!5m2!1sen!2sgr" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                <p>Τηλ: <a href="tel: 210 8203 124">210 8203 124</a></p>
-            </section>
-            <section class="middle-footer-links">
+                <p>Τηλ: <a href="tel:%20210%208203%20124">210 8203 124</a></p>
+            </div>
+            <div class="middle-footer-links">
                 <ul class="site-footer-list">
-                    <li class="site-footer-list-item"><a href="https://www.facebook.com"><img src="../assets/facebook-logo.png" alt="Facebook" width="100" height="100"></a></li>
-                    <li class="site-footer-list-item"><a href="https://www.instagram.com"><img src="../assets/instagram-logo.png" alt="Instagram" width="100" height="100"></a></li>
-                    <li class="site-footer-list-item"><a href="mailto:p3190180@aueb.gr;p3190114@aueb.gr?subject=Webpage Contact"><img src="../assets/email-logo.png" alt="Email" width="100" height="100"></a></li>
+                    <li class="site-footer-list-item"><a href="https://www.facebook.com"><img src="../assets/facebook-logo.png" alt="Facebook" ></a></li>
+                    <li class="site-footer-list-item"><a href="https://www.instagram.com"><img src="../assets/instagram-logo.png" alt="Instagram" ></a></li>
+                    <li class="site-footer-list-item"><a href="mailto:p3190180@aueb.gr;p3190114@aueb.gr?subject=Webpage%20Contact"><img src="../assets/email-logo.png" alt="Email" ></a></li>
                 </ul>
                 <span class="copyright">Take A Byte © 2022</span>
-            </section>
-            <section class="right-footer-open">
+            </div>
+            <div class="right-footer-open">
                 <table class="opening-hours-table">
                     <thead>
                         <tr>
-                            <th colspan="2"><h3>Ώρες Λειτουργίας</h3></th>
+                            <th colspan="2"><span class="table-header">Ώρες Λειτουργίας</span></th>
                         </tr>
                     </thead>
                     <tr>
@@ -163,7 +163,7 @@
                         <td>Κλειστά</td>
                     </tr>
                 </table>
-            </section>
+            </div>
         </footer>
 
     </body>
