--- a/Ask4/product-Dell_Vostro_3500.html
+++ b/Ask4/product-Dell_Vostro_3500.html
@@ -2,7 +2,7 @@
 <html lang="el">
     <head>
         <title>Dell Vostro 3500 15.6" FHD (i3-1115G4/8GB/256GB SSD/W10 Home) (GR Keyboard) | Take A Byte | Computers and Tech</title>
-
+        <link rel="icon" href="../assets/logocolor_icon.png" type="image/x-icon">
         <meta charset="UTF-8">
         <meta name="description" content="Take A Byte | Computers and Tech">
         <meta name="author" content="Christos Rousas, Ioannis Mastrogiannis">
