--- a/Ergasia2/public/category.html
+++ b/Ergasia2/public/category.html
@@ -34,6 +34,7 @@
         <main class="wrapper data" id="category-main">
             <aside id="category-choose">
                 <p id="cart_size"></p>
+                <a id="go_to_cart" href="#">Προβολή περιεχομένου καλαθιού</a>
             </aside>
             <form>
                 <fieldset>
@@ -42,8 +43,8 @@
                     </label>
                     <label for="password"> password 
                         <input type="password" id="password" name="password" required>
-                    </label> 
-                    <div id="error"></div>               
+                    </label>              
+                    <div id="error"></div>  
                 </fieldset>
                 <div class="button-wrapper">
                     <input type="button" id="submit" name="submit" value="Υποβολή">
