--- a/Ergasia2/public/cart.html
+++ b/Ergasia2/public/cart.html
@@ -23,7 +23,7 @@
             <nav class="top-menu">
                 <ul>
                   <li><a href="index.html">Αρχική Σελίδα</a></li>
-                  <li><a href="product-categories.html">Κατηγορίες Προϊόντων</a></li>
+                  <li><a href="index.html">Κατηγορίες Προϊόντων</a></li>
                 </ul>
             </nav>
         </section>
